--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -469,6 +469,12 @@ div#abl_icon {
   border-bottom: 14px solid #ccc;
 }
 
+div#abl_about {
+	text-align: center;
+	font-family: "Myriad Web Pro",Helvetica,Arial,sans-serif;
+	margin: 8px auto;
+}
+
 p#coming_notice {
 	text-align: center;
 	margin: 0 auto;
