--- a/app/views/bars/_bars_beer_items.html
+++ b/app/views/bars/_bars_beer_items.html
@@ -6,9 +6,11 @@
 <table>
 <thead>
   <tr>
-    <th width=150>Name</th>
-	  <th width=300>Brewery</th>
-    <th width=100>Price</th>
+    <th width=200>Name</th>
+		<th width=100>ABV</th>
+		<th width=150>Volume</th>
+		<th width=100 class="abd-table-heading">ABD</th>
+		<th width=100>Price</th>
     <th></th>
     <th></th>
     <th></th>
@@ -19,17 +21,37 @@
 <% @recent_beer_items.each do |item| %>
   <tr>
     <td><%= link_to item.beer.name, item.beer %></td>
-	<td><%= link_to item.beer.brewery.name, item.beer.brewery %></td>
+		<td><%= number_to_percentage item.beer.abv, :precision => 1 %></td>
+		<% unless (item.volume.nil? || item.pouring.nil?) %>
+    	<td><%= number_to_human(item.volume, :units => {:unit => item.volunit}) %> <%= item.pouring %></td>
+    <% else %>
+   		<td><%= item.pouring %></td>
+    <% end %>
+
+		<% unless (item.beer.abv.nil? || item.volume.nil? || item.price.nil?) %>
+			<% case item.volunit %>
+				<% when 'oz' %>
+					<td><%= sprintf("%.3f",(item.beer.abv*item.volume)/(100*item.price)) %> </td>
+				<% when 'ml' %>
+					<td><%= sprintf("%.3f",(item.beer.abv*item.volume*0.03381)/(100*item.price)) %> </td>
+				<% when 'cl' %>
+					<td><%= sprintf("%.3f",(item.beer.abv*item.volume*0.3381)/(100*item.price)) %> </td>
+			<% end %>
+		<% else %>
+			<td></td>
+		<% end %>
+
     <td><%= number_to_currency(item.price) %></td>
-   <% if user_signed_in? && @bar.has_permission?(current_user) %>
-    <td><%= link_to 'Show', item %></td>
-    <td><%= link_to 'Edit', edit_beer_item_path(item) %></td>
-    <td><%= link_to 'Destroy', item, :confirm => 'Are you sure?', :method => :delete %></td>
-   <% else %>
-    <td />
-    <td />
-    <td />
-   <% end %>
+
+   	<% if user_signed_in? && @bar.has_permission?(current_user) %>
+	    <td><%= link_to 'Show', item %></td>
+	    <td><%= link_to 'Edit', edit_beer_item_path(item) %></td>
+	    <td><%= link_to 'Destroy', item, :confirm => 'Are you sure?', :method => :delete %></td>
+	  <% else %>
+	    <td />
+	    <td />
+	    <td />
+    <% end %>
   </tr>
 <% end %>
 </tbody>
@@ -43,9 +65,11 @@
 <table>
 <thead>
   <tr>
-    <th width=150>Name</th>
-	<th width=300>Brewery</th>
-    <th width=100>Price</th>
+    <th width=200>Name</th>
+		<th width=100>ABV</th>
+		<th width=150>Volume</th>
+		<th width=100 class="abd-table-heading">ABD</th>
+		<th width=100>Price</th>
     <th></th>
     <th></th>
     <th></th>
@@ -53,10 +77,31 @@
 </thead>
 <tbody>
 <% @beer_items.each do |item| %>
-  <tr>
-    <td><%= link_to item.beer.name, item.beer %></td>
-	<td><%= link_to item.beer.brewery.name, item.beer.brewery %></td>
-    <td><%= number_to_currency(item.price) %></td>
+  <tr>		
+		<td><%= link_to item.beer.name, item.beer %></td>
+
+		<td><%= number_to_percentage item.beer.abv, :precision => 1 %></td>
+		<% unless (item.volume.nil? || item.pouring.nil?) %>
+    	<td><%= number_to_human(item.volume, :units => {:unit => item.volunit}) %> <%= item.pouring %></td>
+    <% else %>
+   		<td><%= item.pouring %></td>
+    <% end %>
+
+		<% unless (item.beer.abv.nil? || item.volume.nil? || item.price.nil?) %>
+			<% case item.volunit %>
+				<% when 'oz' %>
+					<td><%= sprintf("%.3f",(item.beer.abv*item.volume)/(100*item.price)) %> </td>
+				<% when 'ml' %>
+					<td><%= sprintf("%.3f",(item.beer.abv*item.volume*0.03381)/(100*item.price)) %> </td>
+				<% when 'cl' %>
+					<td><%= sprintf("%.3f",(item.beer.abv*item.volume*0.3381)/(100*item.price)) %> </td>
+			<% end %>
+		<% else %>
+			<td></td>
+		<% end %>
+		
+		<td><%= number_to_currency(item.price) %></td>
+
    <% if user_signed_in? && @bar.has_permission?(current_user) %>
     <td><%= link_to 'Show', item %></td>
     <td><%= link_to 'Edit', edit_beer_item_path(item) %></td>
