google apps validation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,7 +78,8 @@
   </div>
   <div id="footer">
     <%= yield :scripts %>
-    Atlanta Beer List:  Your Place for Beer Prices
+    Atlanta Beer List:  Your Place for Beer Prices<br>
+		Send comments, suggestions or bugs to the <%= mail_to "admin@atlbeerlist.com", "admin" %>
   </div>
 
 </body>
