--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -28,12 +28,6 @@ a {
     background-color: #ff8c00;
     color: #FFFFFF; }
 
-.notice {
-  color: green; }
-
-.alert {
-  color: red; }
-
 #header, #main, #footer {
   width: 800px; }
 
@@ -191,6 +185,12 @@ a {
   text-align: center;
   padding: 25px 50px;
   font-size: 20px; }
+#main .notice {
+  color: green;
+  text-align: left; }
+#main .alert {
+  color: red;
+  text-align: left; }
 #main #announcement {
   text-align: center;
   padding: 25px 50px;
