--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -42,6 +42,14 @@ a {
 	}
 }
 
+a.no_hover_background {
+	padding:0 2px;
+  text-decoration:none;
+
+	&:hover{
+		background-color:white;
+	}
+}
 
 
 #header, #main, #footer {
