added twitter and fb links.  Added searching with indextank to bars and beers (currently name only -- to be improved upon)

--- a/app/views/beer_items/index.html.erb
+++ b/app/views/beer_items/index.html.erb
@@ -1,9 +1,14 @@
 <p />
-<h2>What you've found</h2>
+<h2>Welcome Home</h2>
 <p>
-You've stumbled on the best thing to happen to the Atlanta beer scene since Brickstore opened.  This is your gateway to to beers and bars around the Atlanta area.  Use this site to find the best deal on that special beer you've been looking for or just check to see if the bar around the corner has a new one on tap.
+	You've stumbled on the best thing to happen to the Atlanta beer scene since Brickstore opened.  This is your gateway to to beers and bars around the Atlanta area.  Use this site to find the best deal on that special beer you've been looking for or just check to see if the bar around the corner has a new one on tap.
 </p>
-<h3>WARNING:</h3><p> Currently, listings are not accurate.  This is still under testing.  Check back in the future for the real deal.</p>
+<p>
+	Bars are constantly being added, so check back if you don't see what you're looking for.  If you'd like to hear about our updates, <%= link_to "follow us on twitter", "http://twitter.com/#!/atlbeerlist", :target => "_blank" %>.
+</p>
+<br>
+
+<!-- <h3>WARNING:</h3><p> Currently, listings are not accurate.  This is still under testing.  Check back in the future for the real deal.</p> -->
 <div class="greenLine"></div>
 
 
