--- a/app/views/bars/index.html.erb
+++ b/app/views/bars/index.html.erb
@@ -1,15 +1,36 @@
 <h1>Bars</h1>
 
-<p>Sort by location:</p>
-<div class="search">
 <%= form_tag bars_path, :method => :get do %>
   <p>
-		<%= label_tag "Zip:"%>
-    <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Sort", :name => nil %>
-  </p>
+    <%= text_field_tag :search, params[:search], :size => 20 %>
+    <%= submit_tag "Search", :name => nil, :class => "submit-search-button" %>
+	</p>
+	
+	<div><a id="adv-searching-button">Sorting</a> 
+		<% unless params[:search_by_pouring].nil? %>
+			<span id="reset_search">(<%= link_to "reset", root_path %>) </span>
+		<% end %>
+
+		<% if params[:search].present? || params[:zip].present? %>
+			- <%= link_to('Clear Search', bars_path) %>
+		<% end %>
+	</div>
+
+	<div id="adv-searching">
+	  <p>
+	    <%= text_field_tag :zip, params[:zip], :maxlength => 5, :size => 5, :id => "zip-search" %><br>
+	    <%= submit_tag "Sort by zip", :name => nil, :class => "submit-search-button" %>
+  	</p>
+	</div>
 <% end %>
-</div>
+
+<br style="clear:both">
+<% if params[:search].present? %>
+	<p>
+		Found <%= pluralize(@bars.count, 'bar') %>
+	</p>
+<% end %>
+
 
 <p>Hint:  Click on a row to view the beer list for a bar!</p>
 
