--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,7 @@
 <h2>Sign up</h2>
 
+<p>We promise to never give out your personal information to anyone.</p>
+
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
@@ -12,7 +14,7 @@
   <%= f.password_field :password %></div>
 
   <div class="field">
-	<%= f.label :password_confirmation %><br />
+	<%= f.label "confirm Password" %><br />
   <%= f.password_field :password_confirmation %></div>
 
   <div class="actions">
