--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,8 +78,11 @@
   </div>
   <div id="footer">
     <%= yield :scripts %>
-    Atlanta Beer List:  Your Place for Beer Prices<br>
+    Atlanta Beer List:  The master beer list for Atlanta's bars.<br>
 		Send comments, suggestions or bugs to the <%= mail_to "admin@atlbeerlist.com", "admin" %>
+		<br><br>
+				<a href="http://www.facebook.com/pages/AtlBeerListcom/106072122833011" class="no_hover_background" target="_blank"><img src="images/facebook-icon.jpg" height="22px" width="22px" alt="Follow atlbeerlist on Twitter"/></a>
+				<a href="http://www.twitter.com/atlbeerlist" class="no_hover_background" target="_blank"><img src="http://twitter-badges.s3.amazonaws.com/t_small-a.png" alt="Follow atlbeerlist on Twitter"/></a>
   </div>
 
 </body>
