added sorting to beer/show

--- a/app/views/beer_items/index.html.erb
+++ b/app/views/beer_items/index.html.erb
@@ -1,8 +1,11 @@
 <p />
 <h2>Welcome Home</h2>
 <p>
-	You've stumbled on the best thing to happen to the Atlanta beer scene since Brickstore opened.  This is your gateway to to beers and bars around the Atlanta area.  Use this site to find the best deal on that special beer you've been looking for or just check to see if the bar around the corner has a new one on tap.
+	<b>About us</b>  You've stumbled on the best thing to happen to the Atlanta beer scene since Brickstore opened.  This is your gateway to to beers and bars around the Atlanta area.  Use this site to find the best deal on that special beer you've been looking for or just check to see if the bar around the corner has a new one on tap.
 </p>
+<p>
+	<b>Want to help?</b>  Have a bar you wish was listed?  Every user has the power to add and edit listings, however we understand that this may be more work than you're willing to undertake.  You can also help by <%= mail_to "admin@atlbeerlist.com", "sending me a website, pdf, or even a picture of a bars menu", :subject => "Bar Menu!!" %>.  Thank you!!
+</p>	
 <p>
 	Bars are constantly being added, so check back if you don't see what you're looking for.  If you'd like to hear about our updates, <%= link_to "follow us on twitter", "http://twitter.com/#!/atlbeerlist", :target => "_blank" %>.
 </p>
