--- a/app/views/bars/_bars_beer_items.html
+++ b/app/views/bars/_bars_beer_items.html
@@ -66,7 +66,7 @@
 <thead>
   <tr>
     <th width=200>Name</th>
-		<th width=100>ABV</th>
+		<th width=100>ABV</span></th>
 		<th width=150>Volume</th>
 		<th width=100 class="abd-table-heading">ABD</th>
 		<th width=100>Price</th>
