--- a/app/views/bars/_bars_beer_items.html
+++ b/app/views/bars/_bars_beer_items.html
@@ -28,18 +28,7 @@
    		<td><%= item.pouring %></td>
     <% end %>
 
-		<% unless (item.beer.abv.nil? || item.volume.nil? || item.price.nil?) %>
-			<% case item.volunit %>
-				<% when 'oz' %>
-					<td><%= sprintf("%.3f",(item.beer.abv*item.volume)/(100*item.price)) %> </td>
-				<% when 'ml' %>
-					<td><%= sprintf("%.3f",(item.beer.abv*item.volume*0.03381)/(100*item.price)) %> </td>
-				<% when 'cl' %>
-					<td><%= sprintf("%.3f",(item.beer.abv*item.volume*0.3381)/(100*item.price)) %> </td>
-			<% end %>
-		<% else %>
-			<td></td>
-		<% end %>
+		<td><%= sprintf("%.3f",item.abd) %></td>
 
     <td><%= number_to_currency(item.price) %></td>
 
@@ -62,14 +51,14 @@
 
 <!-- ALl BEERS -->
 <h2>All Beers</h2>
-<table>
+<table id="sorted_beer_item_list">
 <thead>
   <tr>
-    <th width=200>Name</th>
-		<th width=100>ABV</span></th>
-		<th width=150>Volume</th>
-		<th width=100 class="abd-table-heading">ABD</th>
-		<th width=100>Price</th>
+    <th width=200><%= sortable "beers.name", "Name" %> <span class="asc"></th>
+		<th width=100><%= sortable "beers.abv", "ABV" %> <span class="asc"></span></th>
+		<th width=150><%= sortable "volume", "Pouring" %> <span class="asc"></th>
+		<th width=100 class="abd-table-heading"><%= sortable "abd", "ABD" %> <span class="asc"></th>
+		<th width=100><%= sortable "price", "Price" %> <span class="asc"></th>
     <th></th>
     <th></th>
     <th></th>
@@ -87,18 +76,7 @@
    		<td><%= item.pouring %></td>
     <% end %>
 
-		<% unless (item.beer.abv.nil? || item.volume.nil? || item.price.nil?) %>
-			<% case item.volunit %>
-				<% when 'oz' %>
-					<td><%= sprintf("%.3f",(item.beer.abv*item.volume)/(100*item.price)) %> </td>
-				<% when 'ml' %>
-					<td><%= sprintf("%.3f",(item.beer.abv*item.volume*0.03381)/(100*item.price)) %> </td>
-				<% when 'cl' %>
-					<td><%= sprintf("%.3f",(item.beer.abv*item.volume*0.3381)/(100*item.price)) %> </td>
-			<% end %>
-		<% else %>
-			<td></td>
-		<% end %>
+		<td><%= sprintf("%.3f",item.abd) %></td>
 		
 		<td><%= number_to_currency(item.price) %></td>
 
