--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -22,20 +22,22 @@
 <table>
 <thead>
   <tr align="left">
-    <th width=150>Name</th>
-	  <th width=250>Brewery</th>
-    <th width=120>Pouring at . . .</th>
-    <th width=50></th>
-    <th width=50></th>
+    <th width=25%>Name</th>
+	  <th width=25%>Brewery</th>
+		<th width=20%>Style</th>
+    <th width=15%>Pouring at...</th>
+    <th width=8%></th>
+    <th width=6%></th>
   </tr>
 </thead>
 <tbody>
 <% @beers.each do |beer| %>
   <tr  id="beers/<%= beer.id %>">
     <td><%= link_to beer.name, beer %></td>
-	<td><%= link_to beer.brewery.name, beer.brewery %></td>
+		<td><%= link_to beer.brewery.name, beer.brewery %></td>
+		<td><%= beer.try(:beer_style) ? beer.beer_style.name : "" %></td>
     <td><%= pluralize(beer.bars.count,"bar") %></td>
-	<td><%= link_to 'Details', beer, :class => 'action_link' %>
+		<td><%= link_to 'Details', beer, :class => 'action_link' %>
     <td><%= link_to 'Edit', edit_beer_path(beer), :class => 'action_link'  %></td>
   </tr>
 <% end %>
