EAV release.  Changed brewery/show to just show the beers they brew rather than beer_items for that brewery

--- a/app/views/bars/_bars_beer_items.html
+++ b/app/views/bars/_bars_beer_items.html
@@ -54,11 +54,11 @@
 <table id="sorted_beer_item_list">
 <thead>
   <tr>
-    <th width=200><%= sortable "beers.name", "Name" %> <span class="asc"></th>
+    <th width=200><%= sortable "beers.name", "Name" %> <span class="asc"></span></th>
 		<th width=100><%= sortable "beers.abv", "ABV" %> <span class="asc"></span></th>
-		<th width=150><%= sortable "volume", "Pouring" %> <span class="asc"></th>
-		<th width=100 class="abd-table-heading"><%= sortable "abd", "ABD" %> <span class="asc"></th>
-		<th width=100><%= sortable "price", "Price" %> <span class="asc"></th>
+		<th width=150><%= sortable "volume", "Pouring" %> <span class="asc"></span></th>
+		<th width=100 class="abd-table-heading"><%= sortable "abd", "ABD" %> <span class="asc"></span></th>
+		<th width=100><%= sortable "price", "Price" %> <span class="asc"></span></th>
     <th></th>
     <th></th>
     <th></th>
