--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @brewery.name %></h1>
 
-<h3><%= pluralize(@brewery.beers.length, "beer") %> being brewed</h3> <br />
+<h3>Brewing <%= pluralize(@brewery.beers.length, "beer") %></h3> <br />
 
 <p>
 	<%= @brewery.address %><br>
@@ -17,48 +17,19 @@
 <thead>
   <tr>
     <th width=200>Beer</th>
-		<th width=200>Bar</th>
-		<th width=150>Pouring</th>
+		<th width=200>Style</th>
 		<th width=80>ABV</th>
-		<th width=80 class="abd-table-heading">ABD</th>
-    <th width=100>Price</th>
-    <th></th>
-    <th></th>
+		<th width=80>Pouring at...</th>
   </tr>
 </thead>
 <tbody>
 <% @beers.each do |beer| %>
-<tr>
-<% beer.beer_items.each do |item| %>
-  <tr>
-      <td><%= link_to item.beer.name, item.beer %></td>
-	  	<td><%= link_to item.bar.name, item.bar %></td>
-      <td><%= number_to_human(item.volume, :units => {:unit => item.volunit}) %> <%= item.pouring %></td>
-			<td><%= number_to_percentage beer.abv, :precision => 1 %></td>
-
-			<% unless (beer.abv.nil? || item.volume.nil? || item.price.nil?) %>
-				<% case item.volunit %>
-					<% when 'oz' %>
-						<td><%= sprintf("%.3f",(beer.abv*item.volume)/(100*item.price)) %> </td>
-					<% when 'ml' %>
-						<td><%= sprintf("%.3f",(beer.abv*item.volume*0.03381)/(100*item.price)) %> </td>
-					<% when 'cl' %>
-						<td><%= sprintf("%.3f",(beer.abv*item.volume*0.3381)/(100*item.price)) %> </td>
-				<% end %>
-			<% else %>
-				<td></td>
-			<% end %>
-
-			<td><%= number_to_currency(item.price) %></td>
-    <% if item.bar.has_permission?(current_user) %>
-      <td><%= link_to 'Edit', edit_beer_item_path(item) %></td>
-      <td><%= link_to 'Destroy', item, :confirm => 'Are you sure?', :method => :delete %></td>
-    <% else %>
-    	<td />
-    	<td />
-    <% end %>
+	<tr>
+		<td><%= link_to beer.name, beer %></td>
+		<td><%= beer.try(:style) ? beer.style.name : "" %></td>
+		<td><%= number_to_percentage beer.abv, :precision => 1 %></td>
+		<td><%= pluralize(beer.bars.count, "bar") %></td>
   </tr>
-<% end %>
 </tr>
 <% end %>
 </tbody>
