fixed spelling error on front page

--- a/app/views/beer_items/index.html.erb
+++ b/app/views/beer_items/index.html.erb
@@ -1,7 +1,7 @@
 <p />
 <h2>Welcome Home</h2>
 <p>
-	<b>About us</b>  You've stumbled on the best thing to happen to the Atlanta beer scene since Brickstore opened.  This is your gateway to to beers and bars around the Atlanta area.  Use this site to find the best deal on that special beer you've been looking for or just check to see if the bar around the corner has a new one on tap.
+	<b>About us</b>  You've stumbled on the best thing to happen to the Atlanta beer scene since Brickstore opened.  This is your gateway to beers and bars around the Atlanta area.  Use this site to find the best deal on that special beer you've been looking for or just check to see if the bar around the corner has a new one on tap.
 </p>
 <p>
 	<b>Want to help?</b>  Have a bar you wish was listed?  Every user has the power to add and edit listings, however we understand that this may be more work than you're willing to undertake.  You can also help by <%= mail_to "admin@atlbeerlist.com", "sending me a website, pdf, or even a picture of a bars menu", :subject => "Bar Menu!!" %>.  Thank you!!
@@ -33,39 +33,8 @@
 </div>
 
 <br style="clear:both">
-<h2 id="latest_additions">Latest Additions</h2><p id="new_item"><%= link_to "Add a listing", new_beer_item_path %></p>
-<table id="sorted_beer_item_list" class="itemlist">
-<thead>
-  <tr>
-    <th width=200><%= sortable "beers.name", "Beer" %> <span class="asc"></span></th>
-    <th width=230><%= sortable "bars.name", "Bar" %> <span class="asc"></span></th>
-		<th widht=150>Style</th>
-    <th width=120><%= sortable "volume", "Pouring" %> <span class="asc"></span></th>
-    <th width=80><%= sortable "price" %> <span class="asc"></span></th>
-		<!-- <th width=150><%= sortable "created_at", "Added"%><span class="desc"></span></th> -->
-    <th width=50></th>
-	<th width=50></th>
-  </tr>
-</thead>
-<tbody>
-<% @beer_items.each do |f| %>
-  <tr>
-    <td><%= link_to f.beer.name, f.beer %></td>
-    <td><%= link_to f.bar.name, f.bar %></td>
-		<td><%= f.beer.try(:beer_style) ? f.beer.beer_style.name : "" %></td>
-    <% unless (f.volume.nil? || f.volunit.nil?) %>
-       	<td><%= number_to_human(f.volume, :units => {:unit => f.volunit}) %> <%= f.pouring %></td>
-    <% else %>
-    	<td><%= f.pouring %></td>
-    <% end %>
-    <td><%= number_to_currency(f.price) %></td>
-		<!-- <td><%= f.created_at.strftime('%m/%d/%Y') %></td> -->
-	<td><%= link_to 'Details', f , :class => 'action_link' %></td>
-	<td><%= link_to 'Edit', edit_beer_item_path(f) , :class => 'action_link'%></td>
-  </tr>
-<% end %>
-</tbody>
-</table>
+
+<%= render "newest_items" %>
 
 <br />
 
