--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,8 @@
   <div id="footer">
     <%= yield :scripts %>
     Atlanta Beer List:  The master beer list for Atlanta's bars.<br>
-		Send comments, suggestions or bugs to the <%= mail_to "admin@atlbeerlist.com", "admin" %>
+		Send comments, suggestions or bugs to the <%= mail_to "admin@atlbeerlist.com", "admin" %><br>
+		&#64; 2011, Greggory Rothmeier
 		<br><br>
 				<%= link_to image_tag("facebook-icon.jpg", :height => "22px", :width => "22px"), "http://www.facebook.com/pages/AtlBeerListcom/106072122833011", :class => "no_hover_background", :target => "_blank" %>
 				<a href="http://www.twitter.com/atlbeerlist" class="no_hover_background" target="_blank"><img src="http://twitter-badges.s3.amazonaws.com/t_small-a.png" alt="Follow atlbeerlist on Twitter"/></a>
